Added heroku url to cors setting